<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/wh"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:cardBackgroundColor="#b8efb6"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="30dp"
            app:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        android:src="@drawable/title"
                        android:contentDescription="@string/movie_title_indication" />

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="@string/movietitle"
                        android:textColor="#ffffff"
                        android:textSize="25sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/movie_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/backdrop" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="30dp"
            app:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/poster" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/cal"
                            android:contentDescription="@string/calender_indication" />

                        <TextView
                            android:id="@+id/movie_release_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="20dp"
                            android:text=""
                            android:textColor="#a30505"
                            android:textSize="15sp"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:layout_marginStart="16dp"
                        android:paddingTop="5dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/rate"
                            android:contentDescription="@string/rating_indication" />

                        <TextView
                            android:id="@+id/movie_vote_average"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="20dp"
                            android:textColor="#9c0a0a"
                            android:textSize="18sp"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:layout_gravity="end|bottom"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/favourite"
                            android:src="@drawable/fav_del"
                            android:contentDescription="@string/favimage" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/design"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="15dp"
                    android:text="@string/plot"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/plot"
                    android:textColor="#9f0335"
                    android:textSize="12sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:background="@drawable/design"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="30dp"
            app:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/design"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/movie_trailers"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="NestedScrolling">

                    <include layout="@layout/recycler_veiw" />
                </ScrollView>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="#b6efea"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="30dp"
            app:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/design"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/movie_reviews"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="NestedScrolling">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/reviewrecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </ScrollView>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
</android.support.design.widget.AppBarLayout>
